# raspberry_script

./: .gitignore  CMakeLists.txt  README.md  gintama.conf  onepiece.conf  onepunchman.conf  raspberry_script.sln  scan-auto-fetch.sln  shingeki-no-kyojin.conf
restart_transmission/: build.sh  main.cpp
scan-auto-fetch/: anime_db.cpp  anime_db.hpp  build.sh  configuration_input.cpp  configuration_input.hpp  curl_getter.hpp  error_code.cpp  error_code.hpp  fetch_image.cpp  fetch_image.hpp  fetch_manga.sh  gintama.conf  main.cpp  onepiece.conf  onepiece3d.conf  onepunchman.conf  scan-auto-fetch.sln  scan-auto-fetch.vcxproj  shingeki-no-kyojin.conf  source_token.cpp  source_token.hpp  trim.hpp
scan-auto-fetch/scan-auto-fetch/: anime_db.hpp  build.sh  configuration_input.hpp  curl_getter.hpp  error_code.hpp  fetch_image.hpp  main.cpp  scan-auto-fetch.vcxproj  source_token.hpp
test/: gintama.conf  onepiece.conf  onepunchman.conf  shingeki-no-kyojin.conf
test/Gintama/: gintama.db~
when_is_on/: build.sh  input.cpp  input.hpp  main.cpp  when_is_on.vcxproj
